syntax = "proto3";

option go_package = ".;proto";

service Greeter { // 生成的服务接口
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// 生成的消息结构体
message HelloRequest {
  string name = 1;
}

// 生成的消息结构体
message HelloReply {
  string message = 1;
}
